--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,11 +5,11 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.7
   platforms:
-    - name: RHEL/Centos
+    - name: EL
       versions:
         - 7
   galaxy_tags:
     - web
-    - Database
+    - database
   dependencies:
     - NO Dependancies Needed,EveryThing is automated
