--- a/tasks/webserver.yml
+++ b/tasks/webserver.yml
@@ -1,5 +1,5 @@
 - name: Install apache web server
-  yum: pkg=httpd state=latest
+  yum: pkg=httpd state=present
   tags: webserver
 - name: Start and Enable httpd
   service: name=httpd state=restarted enabled=yes
@@ -11,5 +11,5 @@
     state: enabled
   tags: webserver
 - name: Reload firewalld service after Enabling http service
-  command: firewall-cmd --reload
+  service: name=firewalld state=restarted enabled=yes
   tags: webserver
