--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,6 +6,9 @@ galaxy_info:
   name: Ansible-WordPress-Role
   description: Automated Installation and Configuring WORDPRESS on LAMP Stack Based on RHEL/Centos 7 OS_Family
   displayName: Mina-Maher
+  metadata:
+    displayName: Ansible-WordPress-Role
+    providerDisplayName: "MIna-Maher"
   license: BSD
   min_ansible_version: 2.7
   platforms:
