--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,3 +6,5 @@ wordpress_db: "wordpress"
 wordpress_dbuser: "wordpress"
 ## WordPress DataBase Password
 wordpress_dbpass: "123456789"
+## WordPress Database hostname
+host: "localhost"
