--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,5 +6,5 @@ wordpress_db: "wordpress"
 wordpress_dbuser: "wordpress"
 ## WordPress DataBase Password
 wordpress_dbpass: "123456789"
-## WordPress Database hostname
+## WordPress Database localhost hostname
 host: "localhost"
