--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
   yum: pkg={{ item }} state=present
   with_items:
    - epel-release
-   - yum-utils
+   - dnf-plugins-core
    - https://rpms.remirepo.net/fedora/remi-release-31.rpm
   tags: php
 - name: enabling the PHP 7.3 Remi repository
